samples/_failures_safe/1761435327_2e04cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19b37f4f.c: In function ‘main’:
./samples/SAFE/__tmp_19b37f4f.c:169:5: error: expected expression at end of input
  169 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_19b37f4f.c:169:5: error: expected declaration or statement at end of input
